rework game and gameoutcome service & repo, add mapper
Closes #6
