# gamertrack-application/src/main/java/com/gepardec/rest/impl/GameResourceImpl.java
@@ -5,7 +5,8 @@ import com.gepardec.model.Game;
 import com.gepardec.rest.api.GameResource;
 import com.gepardec.rest.model.command.CreateGameCommand;
 import com.gepardec.rest.model.command.UpdateGameCommand;
-import com.gepardec.rest.model.dto.GameDto;
+import com.gepardec.rest.model.dto.GameRestDto;
+import com.gepardec.rest.model.mapper.RestMapper;
 import jakarta.enterprise.context.RequestScoped;
 import jakarta.inject.Inject;
 import jakarta.ws.rs.core.Response;
@@ -18,10 +19,13 @@ public class GameResourceImpl implements GameResource {
   @Inject
   private GameService gameService;
 
+  @Inject
+  private RestMapper restMapper;
+
   @Override
   public Response getGames() {
     //Return 200 with empty list with no games if none are in the db instead of other Statuscodes
-    return Response.ok().entity(gameService.findAllGames().stream().map(GameDto::new).toList())
+    return Response.ok().entity(gameService.findAllGames().stream().map(GameRestDto::new).toList())
         .build();
   }
 
@@ -29,7 +33,7 @@ public class GameResourceImpl implements GameResource {
   public Response getGame(Long id) {
     //Return 200 ok with found game or not found if it does not exist
     return gameService.findGameById(id)
-        .map(GameDto::new).map(Response::ok)
+        .map(GameRestDto::new).map(Response::ok)
         .orElseGet(() -> Response.status(Status.NOT_FOUND))
         .build();
   }
@@ -37,8 +41,8 @@ public class GameResourceImpl implements GameResource {
   @Override
   public Response createGame(CreateGameCommand gameCmd) {
     //Return saved Game if it was persisted or Else return Bad Request
-    return gameService.saveGame(new Game(gameCmd.title(), gameCmd.rules()))
-        .map(GameDto::new)
+    return gameService.saveGame(restMapper.toGameDto(gameCmd))
+        .map(GameRestDto::new)
         .map(gameDto -> Response.status(Status.CREATED).entity(gameDto))
         .orElseGet(() -> Response.status(Status.BAD_REQUEST))
         .build();
@@ -49,8 +53,8 @@ public class GameResourceImpl implements GameResource {
     Optional<Game> gameOld = gameService.findGameById(id);
 
     //Returns updated 200OK with updated Entity if it exists or if it does not exist the same object provided on request
-    return gameService.updateGame(id, new Game(gameCmd.title(), gameCmd.rules()))
-        .map(GameDto::new)
+    return gameService.updateGame(restMapper.toGameDto(id, gameCmd))
+        .map(GameRestDto::new)
         .map(Response::ok)
         .orElseGet(() -> Response.status(Status.NOT_FOUND).entity(gameCmd))
         .build();
@@ -58,7 +62,7 @@ public class GameResourceImpl implements GameResource {
 
   @Override
   public Response deleteGame(Long id) {
-    return gameService.deleteGame(id).map(GameDto::new).map(Response::ok)
+    return gameService.deleteGame(id).map(GameRestDto::new).map(Response::ok)
         .orElseGet(() -> Response.status(Status.NOT_FOUND)).build();
   }
 }
