# gamertrack-application/src/main/java/com/gepardec/rest/model/command/UpdateGameOutcomeCommand.java
@@ -2,6 +2,6 @@ package com.gepardec.rest.model.command;
 
 import java.util.List;
 
-public record UpdateGameOutcomeCommand(Long gameOutcomeId, Long gameId, List<Long> userIds) {
+public record UpdateGameOutcomeCommand(Long gameId, List<Long> userIds) {
 
 }
